TODO
* add support for retrieving identifier values
  - add test

20120507
* updated dependencies

20120426
* fixes for pkg-config detection of libraries

20120422
* changed byte order to int

20120418
* added format flags

20120417
* updated dependencies
* added with index functions

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* updated dependencies

20120314
* worked on adding tests
* code clean up
* updated include header
* updated man page

20120312
* Created stand-alone version of version used in liblnk
