@@ -1,4 +1,4 @@
 Acknowledgements: libfguid
 
-Copyright (c) 2010-2012, Joachim Metz <jbmetz@users.sourceforge.net>
+Copyright (c) 2010-2012, Joachim Metz <joachim.metz@gmail.com>
 
