@@ -24,11 +24,11 @@ BEGIN
       VALUE "FileDescription",		"Library to support the GUID/UUID format\0"
       VALUE "FileVersion",		"@VERSION@" "\0"
       VALUE "InternalName",		"libfguid.dll\0"
-      VALUE "LegalCopyright",		"(c) 2010-2012 Joachim Metz <jbmetz@users.sourceforge.net>\0"
+      VALUE "LegalCopyright",		"(c) 2010-2012 Joachim Metz <joachim.metz@gmail.com>\0"
       VALUE "OriginalFilename",		"libfguid.dll\0"
       VALUE "ProductName",		"libfguid\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://libfdata.sourceforge.net\0"
+      VALUE "Comments",			"For more information visit http://code.google.com/p/libflibs/\0"
     END
   END
   BLOCK "VarFileInfo"
