@@ -2,7 +2,7 @@
 #
 # GUID/UUID library identifier to string testing script
 #
-# Copyright (c) 2010-2012, Joachim Metz <jbmetz@users.sourceforge.net>
+# Copyright (c) 2010-2012, Joachim Metz <joachim.metz@gmail.com>
 #
 # Refer to AUTHORS for acknowledgements.
 #
