@@ -1,6 +1,10 @@
 TODO
+* add function to parse GUID/UUID from string (for libfvde)
 * add support for retrieving identifier values
   - add test
+
+20120523
+* changes for project move
 
 20120507
 * updated dependencies
